@@ -25,7 +25,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)mac.h	1.4 (gritter) 6/15/05
+ * Sccsid @(#)mac.h	1.5 (gritter) 6/15/05
  */
 
 /* from OpenSolaris "mac.h	1.8	05/06/08 SMI"	 SVr4.0 1.8 */
@@ -38,6 +38,13 @@
 #define LOBYTE	0377
 #define QUOTE	0200
 
+/*
+ * NetBSD includes stdio.h indirectly through a variety of headers; maybe
+ * others do too. To make sure that we get rid of EOF, include it here
+ * forcibly.
+ */
+#include <stdio.h>
+#undef	EOF
 #define EOF	0
 #define NL	'\n'
 #define SPACE	' '
